--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Mukta');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 
 html, body {
     height:100%;
@@ -30,22 +31,34 @@ h2 {
 
 #start {
     margin-top:75px;
-    color: #fff;
-    font-weight:bold;
-    background-color: #009fe1;
+    color: #ef8234;
+    
+    background-color: #fff;
 }
 
 #map {
     height: 100%;
     min-height: 60vh;
 }
+/*
+#overlay {
+  position: fixed; 
+  display: none; 
+  width: 100%; 
+  height: 100%; 
+  top: 0; 
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 10
+}*/
 
 #destinationBox {
     margin-top: 0;
     padding:10px;
     margin-bottom: 50px;
     color: #fff;
-    text-shadow: 2px 2px #f00000;
     background: rgb(226, 94, 13);
     font-family: mukta;
     font-weight: bold;
@@ -69,9 +82,17 @@ h2 {
     width: 100%;
     color: #fff;
     background-color: rgb(226, 94, 13);
-    text-shadow: 1px 1px #f00000;
-    font-weight: bold;
     margin:0;
+    border-color: #ffc107;
+}
+
+.btn-info:hover{
+    background-color: #ffc107;
+}
+
+.btn-info:focus{
+    border-color:#ffc107;
+    box-shadow: 0 0 0 0.2rem #ffc107;
 }
 
 .dropdown-toggle {
@@ -82,42 +103,44 @@ h2 {
 #find {
     color: #fff;
     background-color: rgb(226, 94, 13);
-    text-shadow: 1px 1px #f00000;
     padding:10px 0px;
     margin-top: 25px;
     margin-bottom:10px;
     text-align: center;
     font-size:1.3em;
-    font-family: mukta;
     width:100%;
+}
+
+#find:focus{
+    box-shadow: 0 0 0 0.2rem #ffc107;
 }
 
 #showMe {
     color: #fff;
     background-color: rgb(226, 94, 13);
-    text-shadow: 1px 1px #f00000;
     padding:10px 0px;
     margin-top: 25px;
     margin-bottom:10px;
     text-align: center;
     font-size:1.3em;
-    font-family: mukta;
     width:100%;
 }
 
 #infoWrapper {
     display: none;
+    
 }
 
 #placeInfo {
+    font-family: 'Roboto Slab', serif;
     margin:0;
     padding:0;
-    color: blue;
+    color: #6a6766;
 }
 
 #placeInfo #placeHeading {
-    color: rgb(226, 94, 13);
+    color: #545150;
     font-size: 20px;
+    font-weight: bold;
 }
-
 
