add modal and change some styling elements

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,5 @@
+/*-----------------------------Global styling----------------------*/
+
 @import url('https://fonts.googleapis.com/css?family=Mukta');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 
@@ -7,6 +9,27 @@ html, body {
     padding:0;
     font-family: mukta;
 }
+
+a {
+    color:#6a6766;
+}
+
+a:hover{
+    text-decoration: none;
+    color: #545150;
+    font-weight: bold;
+}
+
+p {
+    margin:0;
+}
+
+hr {
+    margin-top:5px;
+    margin-bottom: 5px;
+}
+
+/* -------------------------------Welcome page-------------------------*/
 
 #introBlock {
     height:100vh;
@@ -31,28 +54,34 @@ h2 {
 
 #start {
     margin-top:75px;
-    color: #ef8234;
+    color: #fff;
     
-    background-color: #fff;
+    background-color: #ef8234;
 }
+
+/* ----------------------------Map page-------------------------------*/
+
+#mainBody{
+    margin-top:0;
+    background-color: #fff;
+    height:100vh;
+}
+
+/* ---------------------------- Map and Popups-----------------------*/
 
 #map {
     height: 100%;
     min-height: 60vh;
 }
-/*
-#overlay {
-  position: fixed; 
-  display: none; 
-  width: 100%; 
-  height: 100%; 
-  top: 0; 
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0,0,0,0.5);
-  z-index: 10
-}*/
+
+.modal-content{
+    text-align: center;
+    font-family: 'Roboto Slab', serif;
+    font-size: 1em;
+    color: #545150;
+}
+
+/* ----------------------------------------Destination Search Box--------------------------*/
 
 #destinationBox {
     margin-top: 0;
@@ -70,13 +99,7 @@ h2 {
     font-size: 1.3em
 }
 
-#mainBody{
-    margin-top:0;
-    background-color: #fff;
-    height:100vh;
-    
-}
-
+/* -------------------------------------Place selector and show me (map controls)--------------*/
 
 .btn-info{
     width: 100%;
@@ -88,6 +111,11 @@ h2 {
 
 .btn-info:hover{
     background-color: #ffc107;
+    border-color: #ffc107;
+}
+
+.btn-info:active{
+    border-color: #ffc107;
 }
 
 .btn-info:focus{
@@ -98,6 +126,10 @@ h2 {
 .dropdown-toggle {
     padding-top:15px;
     padding-bottom:15px;
+}
+
+.btn-info:not(:disabled):not(.disabled).active, .btn-info:not(:disabled):not(.disabled):active, .show>.btn-info.dropdown-toggle {
+    border-color: #ffc107;
 }
 
 #find {
@@ -114,6 +146,9 @@ h2 {
 #find:focus{
     box-shadow: 0 0 0 0.2rem #ffc107;
 }
+#find:active{
+    border-color: #ffc107;
+}
 
 #showMe {
     color: #fff;
@@ -126,9 +161,10 @@ h2 {
     width:100%;
 }
 
+/*------------------------------------------------Infowindow-------------------------------*/
+
 #infoWrapper {
     display: none;
-    
 }
 
 #placeInfo {
@@ -138,9 +174,10 @@ h2 {
     color: #6a6766;
 }
 
-#placeInfo #placeHeading {
+#placeHeading {
     color: #545150;
     font-size: 20px;
     font-weight: bold;
+    margin: 0;
 }
 
