--- a/static/css/main.css
+++ b/static/css/main.css
@@ -181,3 +181,13 @@ h2 {
     margin: 0;
 }
 
+/*-------------------------Media Queries----------------------*/
+
+@media only screen and (max-width: 480px) {
+    h1 {
+        font-size: 0.7rem
+    }
+    h2 {
+        font-size: 0.7rem
+    }
+}
